# musicdata

./: .coverage  README.md  cookies.txt  database.py  find_camera.py  itunes_client.py  main.py  pyproject.toml  user1_cookies.txt  user2_cookies.txt  yolo_seg.db
templates/: albums.html  collected-artists.html  collected-tracks.html  game.html  index.html
tests/: conftest.py  test_database.py  test_itunes_client.py  test_main.py
